--- a/fitbenchmarking/templates/problem_summary_page_template.html
+++ b/fitbenchmarking/templates/problem_summary_page_template.html
@@ -27,6 +27,7 @@
                 <div class="content">
                     {% if summary_plot_available %}
                         {% if best_results|length > 1 %}
+                            <h3>Summary</h3>
                             <p>
                                 This plot shows a comparison of the runs across cost
                                 functions. Colours are used to distinguish between fits
@@ -42,6 +43,7 @@
                                 <iframe width="100%" height="500" frameborder="0" seamless="seamless" scrolling="no" src="{{ summary_plot }}"></iframe>
                             </div>
                         {% endif %}
+                        <h3>Residuals</h3>
                         <p>
                             Below, you can see a plot for each cost function used (one or multiple),
                             showing the residuals for each fit. Different colours correspond to 
@@ -53,7 +55,8 @@
                         <div align="center" class="figure align-center">
                             <iframe width="100%" height="500" frameborder="0" seamless="seamless" scrolling="no" src="{{ residuals_plot }}"></iframe>
                         </div>
-                        {% if plot_2d_available %}
+                        {% if two_d_plot_available %}
+                            <h3>2d Plots</h3>
                             <p>
                                 The plot below shows the fit on the 2D data. For each cost
                                 function used, only the best fit is shown, that is the fit
@@ -67,10 +70,22 @@
 
                             </p>
                             <div align="center" class="figure align-center">
-                                <iframe width="100%" height="500" frameborder="0" seamless="seamless" scrolling="no" src="{{ plot_2d_data }}"></iframe>
+                                <iframe width="100%" height="500" frameborder="0" seamless="seamless" scrolling="no" src="{{ two_d_plot }}"></iframe>
+                            </div>  
+                        {% endif %}
+                        {% if multistart_plot_avaliable %}
+                            <h3>Multistart plots</h3>
+                            <p>
+                                The plot below shows the fits with different starting conditions. 
+                                The line traces shaded red are the starting values that did not
+                                lead to good fitting outcomes. While the line traces shaded blue
+                                are the ones that did. The data points are also displayed in the
+                                subplots.
+                            </p>
+                            <div align="center" class="figure align-center">
+                                <iframe width="100%" height="500" frameborder="0" seamless="seamless" scrolling="no" src="{{ multistart_plot }}"></iframe>
                             </div>  
                         {% endif %}                      
-
                     {% else %}
                         <div align="center" class="figure align-center">
                             <h3>{{ rerun_make_plots_msg }}</h3>
